fixed vertical alignment when icon is given

--- a/packages/core/src/components/chip/chip.scss
+++ b/packages/core/src/components/chip/chip.scss
@@ -18,6 +18,7 @@
   height: 2rem;
   max-height: 2rem;
   margin-left: $tiny-space;
+  vertical-align: middle;
 }
 
 :host(.inactive) {
